@@ -20,7 +20,6 @@ package org.apache.iceberg.aws.lakeformation;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.time.Duration;
@@ -495,8 +494,7 @@ public class LakeFormationTestBase {
                       .versionId(DEFAULT_IAM_POLICY_VERSION)
                       .build())
               .policyVersion();
-      String currentDocument =
-          URLDecoder.decode(existingPolicy.document(), StandardCharsets.UTF_8.name());
+      String currentDocument = URLDecoder.decode(existingPolicy.document(), StandardCharsets.UTF_8);
       if (Objects.equals(currentDocument, policyDocument)) {
         LOG.info(
             "Policy {} already exists and policy content did not change. Nothing to do.",
@@ -511,8 +509,6 @@ public class LakeFormationTestBase {
       }
     } catch (NoSuchEntityException e) {
       createPolicy(policyName, policyDocument);
-    } catch (UnsupportedEncodingException e) {
-      throw new RuntimeException(e);
     }
   }
 
