@@ -18,23 +18,16 @@
  */
 package org.apache.iceberg.rest;
 
-import com.github.benmanes.caffeine.cache.Cache;
-import com.github.benmanes.caffeine.cache.Caffeine;
-import com.github.benmanes.caffeine.cache.RemovalListener;
 import java.io.Closeable;
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.time.Duration;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.Future;
-import java.util.concurrent.ScheduledExecutorService;
-import java.util.concurrent.TimeUnit;
 import java.util.function.BiFunction;
 import java.util.function.Function;
-import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import org.apache.iceberg.BaseTable;
 import org.apache.iceberg.CatalogProperties;
 import org.apache.iceberg.CatalogUtil;
@@ -62,6 +55,7 @@ import org.apache.iceberg.hadoop.Configurable;
 import org.apache.iceberg.io.CloseableGroup;
 import org.apache.iceberg.io.FileIO;
 import org.apache.iceberg.io.FileIOTracker;
+import org.apache.iceberg.io.StorageCredential;
 import org.apache.iceberg.metrics.MetricsReporter;
 import org.apache.iceberg.metrics.MetricsReporters;
 import org.apache.iceberg.relocated.com.google.common.base.Preconditions;
@@ -70,10 +64,11 @@ import org.apache.iceberg.relocated.com.google.common.collect.ImmutableMap;
 import org.apache.iceberg.relocated.com.google.common.collect.ImmutableSet;
 import org.apache.iceberg.relocated.com.google.common.collect.Lists;
 import org.apache.iceberg.relocated.com.google.common.collect.Maps;
-import org.apache.iceberg.rest.auth.AuthConfig;
-import org.apache.iceberg.rest.auth.OAuth2Properties;
-import org.apache.iceberg.rest.auth.OAuth2Util;
-import org.apache.iceberg.rest.auth.OAuth2Util.AuthSession;
+import org.apache.iceberg.rest.RESTCatalogProperties.SnapshotMode;
+import org.apache.iceberg.rest.auth.AuthManager;
+import org.apache.iceberg.rest.auth.AuthManagers;
+import org.apache.iceberg.rest.auth.AuthSession;
+import org.apache.iceberg.rest.credentials.Credential;
 import org.apache.iceberg.rest.requests.CommitTransactionRequest;
 import org.apache.iceberg.rest.requests.CreateNamespaceRequest;
 import org.apache.iceberg.rest.requests.CreateTableRequest;
@@ -91,12 +86,9 @@ import org.apache.iceberg.rest.responses.ListNamespacesResponse;
 import org.apache.iceberg.rest.responses.ListTablesResponse;
 import org.apache.iceberg.rest.responses.LoadTableResponse;
 import org.apache.iceberg.rest.responses.LoadViewResponse;
-import org.apache.iceberg.rest.responses.OAuthTokenResponse;
 import org.apache.iceberg.rest.responses.UpdateNamespacePropertiesResponse;
 import org.apache.iceberg.util.EnvironmentUtil;
-import org.apache.iceberg.util.Pair;
 import org.apache.iceberg.util.PropertyUtil;
-import org.apache.iceberg.util.ThreadPools;
 import org.apache.iceberg.view.BaseView;
 import org.apache.iceberg.view.ImmutableSQLViewRepresentation;
 import org.apache.iceberg.view.ImmutableViewVersion;
@@ -113,27 +105,15 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     implements Configurable<Object>, Closeable {
   private static final Logger LOG = LoggerFactory.getLogger(RESTSessionCatalog.class);
   private static final String DEFAULT_FILE_IO_IMPL = "org.apache.iceberg.io.ResolvingFileIO";
-  private static final String REST_METRICS_REPORTING_ENABLED = "rest-metrics-reporting-enabled";
-  private static final String REST_SNAPSHOT_LOADING_MODE = "snapshot-loading-mode";
-  // for backwards compatibility with older REST servers where it can be assumed that a particular
-  // server supports view endpoints but doesn't send the "endpoints" field in the ConfigResponse
-  static final String VIEW_ENDPOINTS_SUPPORTED = "view-endpoints-supported";
-  public static final String REST_PAGE_SIZE = "rest-page-size";
-  private static final List<String> TOKEN_PREFERENCE_ORDER =
-      ImmutableList.of(
-          OAuth2Properties.ID_TOKEN_TYPE,
-          OAuth2Properties.ACCESS_TOKEN_TYPE,
-          OAuth2Properties.JWT_TOKEN_TYPE,
-          OAuth2Properties.SAML2_TOKEN_TYPE,
-          OAuth2Properties.SAML1_TOKEN_TYPE);
 
-  // Auth-related properties that are allowed to be passed to the table session
-  private static final Set<String> TABLE_SESSION_ALLOW_LIST =
-      ImmutableSet.<String>builder()
-          .add(OAuth2Properties.TOKEN)
-          .addAll(TOKEN_PREFERENCE_ORDER)
-          .build();
+  /**
+   * @deprecated will be removed in 2.0.0. Use {@link
+   *     org.apache.iceberg.rest.RESTCatalogProperties#PAGE_SIZE} instead.
+   */
+  @Deprecated public static final String REST_PAGE_SIZE = "rest-page-size";
 
+  // these default endpoints must not be updated in order to maintain backwards compatibility with
+  // legacy servers
   private static final Set<Endpoint> DEFAULT_ENDPOINTS =
       ImmutableSet.<Endpoint>builder()
           .add(Endpoint.V1_LIST_NAMESPACES)
@@ -149,8 +129,11 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
           .add(Endpoint.V1_RENAME_TABLE)
           .add(Endpoint.V1_REGISTER_TABLE)
           .add(Endpoint.V1_REPORT_METRICS)
+          .add(Endpoint.V1_COMMIT_TRANSACTION)
           .build();
 
+  // these view endpoints must not be updated in order to maintain backwards compatibility with
+  // legacy servers
   private static final Set<Endpoint> VIEW_ENDPOINTS =
       ImmutableSet.<Endpoint>builder()
           .add(Endpoint.V1_LIST_VIEWS)
@@ -163,11 +146,9 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
   private final Function<Map<String, String>, RESTClient> clientBuilder;
   private final BiFunction<SessionContext, Map<String, String>, FileIO> ioBuilder;
-  private Cache<String, AuthSession> sessions = null;
-  private Cache<String, AuthSession> tableSessions = null;
   private FileIOTracker fileIOTracker = null;
   private AuthSession catalogAuth = null;
-  private boolean keepTokenRefreshed = true;
+  private AuthManager authManager;
   private RESTClient client = null;
   private ResourcePaths paths = null;
   private SnapshotMode snapshotMode = null;
@@ -179,20 +160,14 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
   private CloseableGroup closeables = null;
   private Set<Endpoint> endpoints;
 
-  // a lazy thread pool for token refresh
-  private volatile ScheduledExecutorService refreshExecutor = null;
-
-  enum SnapshotMode {
-    ALL,
-    REFS;
-
-    Map<String, String> params() {
-      return ImmutableMap.of("snapshots", this.name().toLowerCase(Locale.US));
-    }
-  }
-
   public RESTSessionCatalog() {
-    this(config -> HTTPClient.builder(config).uri(config.get(CatalogProperties.URI)).build(), null);
+    this(
+        config ->
+            HTTPClient.builder(config)
+                .uri(config.get(CatalogProperties.URI))
+                .withHeaders(RESTUtil.configHeaders(config))
+                .build(),
+        null);
   }
 
   public RESTSessionCatalog(
@@ -203,7 +178,6 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     this.ioBuilder = ioBuilder;
   }
 
-  @SuppressWarnings("checkstyle:CyclomaticComplexity")
   @Override
   public void initialize(String name, Map<String, String> unresolved) {
     Preconditions.checkArgument(unresolved != null, "Invalid configuration: null");
@@ -212,58 +186,28 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     // catalog service
     Map<String, String> props = EnvironmentUtil.resolveAll(unresolved);
 
-    long startTimeMillis =
-        System.currentTimeMillis(); // keep track of the init start time for token refresh
-    String initToken = props.get(OAuth2Properties.TOKEN);
-    boolean hasInitToken = initToken != null;
+    this.closeables = new CloseableGroup();
 
-    // fetch auth and config to complete initialization
+    this.authManager = AuthManagers.loadAuthManager(name, props);
+    this.closeables.addCloseable(this.authManager);
+
     ConfigResponse config;
-    OAuthTokenResponse authResponse;
-    String credential = props.get(OAuth2Properties.CREDENTIAL);
-    boolean hasCredential = credential != null && !credential.isEmpty();
-    String scope = props.getOrDefault(OAuth2Properties.SCOPE, OAuth2Properties.CATALOG_SCOPE);
-    Map<String, String> optionalOAuthParams = OAuth2Util.buildOptionalParam(props);
-    if (!props.containsKey(OAuth2Properties.OAUTH2_SERVER_URI)
-        && (hasInitToken || hasCredential)
-        && !PropertyUtil.propertyAsBoolean(props, "rest.sigv4-enabled", false)) {
-      LOG.warn(
-          "Iceberg REST client is missing the OAuth2 server URI configuration and defaults to {}{}. "
-              + "This automatic fallback will be removed in a future Iceberg release."
-              + "It is recommended to configure the OAuth2 endpoint using the '{}' property to be prepared. "
-              + "This warning will disappear if the OAuth2 endpoint is explicitly configured. "
-              + "See https://github.com/apache/iceberg/issues/10537",
-          props.get(CatalogProperties.URI),
-          ResourcePaths.tokens(),
-          OAuth2Properties.OAUTH2_SERVER_URI);
-    }
-    String oauth2ServerUri =
-        props.getOrDefault(OAuth2Properties.OAUTH2_SERVER_URI, ResourcePaths.tokens());
-    try (RESTClient initClient = clientBuilder.apply(props)) {
-      Map<String, String> initHeaders =
-          RESTUtil.merge(configHeaders(props), OAuth2Util.authHeaders(initToken));
-      if (hasCredential) {
-        authResponse =
-            OAuth2Util.fetchToken(
-                initClient, initHeaders, credential, scope, oauth2ServerUri, optionalOAuthParams);
-        Map<String, String> authHeaders =
-            RESTUtil.merge(initHeaders, OAuth2Util.authHeaders(authResponse.token()));
-        config = fetchConfig(initClient, authHeaders, props);
-      } else {
-        authResponse = null;
-        config = fetchConfig(initClient, initHeaders, props);
-      }
+    try (RESTClient initClient = clientBuilder.apply(props);
+        AuthSession initSession = authManager.initSession(initClient, props)) {
+      config = fetchConfig(initClient.withAuthSession(initSession), initSession, props);
     } catch (IOException e) {
       throw new UncheckedIOException("Failed to close HTTP client", e);
     }
 
     // build the final configuration and set up the catalog's auth
     Map<String, String> mergedProps = config.merge(props);
-    Map<String, String> baseHeaders = configHeaders(mergedProps);
 
     if (config.endpoints().isEmpty()) {
       this.endpoints =
-          PropertyUtil.propertyAsBoolean(mergedProps, VIEW_ENDPOINTS_SUPPORTED, false)
+          PropertyUtil.propertyAsBoolean(
+                  mergedProps,
+                  RESTCatalogProperties.VIEW_ENDPOINTS_SUPPORTED,
+                  RESTCatalogProperties.VIEW_ENDPOINTS_SUPPORTED_DEFAULT)
               ? ImmutableSet.<Endpoint>builder()
                   .addAll(DEFAULT_ENDPOINTS)
                   .addAll(VIEW_ENDPOINTS)
@@ -273,83 +217,46 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       this.endpoints = ImmutableSet.copyOf(config.endpoints());
     }
 
-    this.sessions = newSessionCache(mergedProps);
-    this.tableSessions = newSessionCache(mergedProps);
-    this.keepTokenRefreshed =
-        PropertyUtil.propertyAsBoolean(
-            mergedProps,
-            OAuth2Properties.TOKEN_REFRESH_ENABLED,
-            OAuth2Properties.TOKEN_REFRESH_ENABLED_DEFAULT);
     this.client = clientBuilder.apply(mergedProps);
+    this.closeables.addCloseable(this.client);
+
     this.paths = ResourcePaths.forCatalogProperties(mergedProps);
 
-    String token = mergedProps.get(OAuth2Properties.TOKEN);
-    this.catalogAuth =
-        new AuthSession(
-            baseHeaders,
-            AuthConfig.builder()
-                .credential(credential)
-                .scope(scope)
-                .oauth2ServerUri(oauth2ServerUri)
-                .optionalOAuthParams(optionalOAuthParams)
-                .build());
-    if (authResponse != null) {
-      this.catalogAuth =
-          AuthSession.fromTokenResponse(
-              client, tokenRefreshExecutor(name), authResponse, startTimeMillis, catalogAuth);
-    } else if (token != null) {
-      this.catalogAuth =
-          AuthSession.fromAccessToken(
-              client, tokenRefreshExecutor(name), token, expiresAtMillis(mergedProps), catalogAuth);
-    }
+    this.catalogAuth = authManager.catalogSession(client, mergedProps);
+    this.closeables.addCloseable(this.catalogAuth);
 
-    this.pageSize = PropertyUtil.propertyAsNullableInt(mergedProps, REST_PAGE_SIZE);
+    this.pageSize =
+        PropertyUtil.propertyAsNullableInt(mergedProps, RESTCatalogProperties.PAGE_SIZE);
     if (pageSize != null) {
       Preconditions.checkArgument(
-          pageSize > 0, "Invalid value for %s, must be a positive integer", REST_PAGE_SIZE);
+          pageSize > 0,
+          "Invalid value for %s, must be a positive integer",
+          RESTCatalogProperties.PAGE_SIZE);
     }
 
     this.io = newFileIO(SessionContext.createEmpty(), mergedProps);
 
     this.fileIOTracker = new FileIOTracker();
-    this.closeables = new CloseableGroup();
     this.closeables.addCloseable(this.io);
-    this.closeables.addCloseable(this.client);
     this.closeables.addCloseable(fileIOTracker);
     this.closeables.setSuppressCloseFailure(true);
 
     this.snapshotMode =
         SnapshotMode.valueOf(
             PropertyUtil.propertyAsString(
-                    mergedProps, REST_SNAPSHOT_LOADING_MODE, SnapshotMode.ALL.name())
+                    mergedProps,
+                    RESTCatalogProperties.SNAPSHOT_LOADING_MODE,
+                    RESTCatalogProperties.SNAPSHOT_LOADING_MODE_DEFAULT)
                 .toUpperCase(Locale.US));
 
     this.reporter = CatalogUtil.loadMetricsReporter(mergedProps);
 
     this.reportingViaRestEnabled =
-        PropertyUtil.propertyAsBoolean(mergedProps, REST_METRICS_REPORTING_ENABLED, true);
+        PropertyUtil.propertyAsBoolean(
+            mergedProps,
+            RESTCatalogProperties.METRICS_REPORTING_ENABLED,
+            RESTCatalogProperties.METRICS_REPORTING_ENABLED_DEFAULT);
     super.initialize(name, mergedProps);
-  }
-
-  private AuthSession session(SessionContext context) {
-    AuthSession session =
-        sessions.get(
-            context.sessionId(),
-            id -> {
-              Pair<String, Supplier<AuthSession>> newSession =
-                  newSession(context.credentials(), context.properties(), catalogAuth);
-              if (null != newSession) {
-                return newSession.second().get();
-              }
-
-              return null;
-            });
-
-    return session != null ? session : catalogAuth;
-  }
-
-  private Supplier<Map<String, String>> headers(SessionContext context) {
-    return session(context)::headers;
   }
 
   @Override
@@ -373,13 +280,16 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     do {
       queryParams.put("pageToken", pageToken);
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
       ListTablesResponse response =
-          client.get(
-              paths.tables(ns),
-              queryParams,
-              ListTablesResponse.class,
-              headers(context),
-              ErrorHandlers.namespaceErrorHandler());
+          client
+              .withAuthSession(contextualSession)
+              .get(
+                  paths.tables(ns),
+                  queryParams,
+                  ListTablesResponse.class,
+                  Map.of(),
+                  ErrorHandlers.namespaceErrorHandler());
       pageToken = response.nextPageToken();
       tables.addAll(response.identifiers());
     } while (pageToken != null);
@@ -393,8 +303,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkIdentifierIsValid(identifier);
 
     try {
-      client.delete(
-          paths.table(identifier), null, headers(context), ErrorHandlers.tableErrorHandler());
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+      client
+          .withAuthSession(contextualSession)
+          .delete(paths.table(identifier), null, Map.of(), ErrorHandlers.tableErrorHandler());
       return true;
     } catch (NoSuchTableException e) {
       return false;
@@ -407,12 +319,15 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkIdentifierIsValid(identifier);
 
     try {
-      client.delete(
-          paths.table(identifier),
-          ImmutableMap.of("purgeRequested", "true"),
-          null,
-          headers(context),
-          ErrorHandlers.tableErrorHandler());
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+      client
+          .withAuthSession(contextualSession)
+          .delete(
+              paths.table(identifier),
+              ImmutableMap.of("purgeRequested", "true"),
+              null,
+              Map.of(),
+              ErrorHandlers.tableErrorHandler());
       return true;
     } catch (NoSuchTableException e) {
       return false;
@@ -429,18 +344,47 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         RenameTableRequest.builder().withSource(from).withDestination(to).build();
 
     // for now, ignore the response because there is no way to return it
-    client.post(paths.rename(), request, null, headers(context), ErrorHandlers.tableErrorHandler());
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+    client
+        .withAuthSession(contextualSession)
+        .post(paths.rename(), request, null, Map.of(), ErrorHandlers.tableErrorHandler());
+  }
+
+  @Override
+  public boolean tableExists(SessionContext context, TableIdentifier identifier) {
+    try {
+      checkIdentifierIsValid(identifier);
+      if (endpoints.contains(Endpoint.V1_TABLE_EXISTS)) {
+        AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+        client
+            .withAuthSession(contextualSession)
+            .head(paths.table(identifier), Map.of(), ErrorHandlers.tableErrorHandler());
+        return true;
+      } else {
+        // fallback in order to work with 1.7.x and older servers
+        return super.tableExists(context, identifier);
+      }
+    } catch (NoSuchTableException e) {
+      return false;
+    }
+  }
+
+  private static Map<String, String> snapshotModeToParam(SnapshotMode mode) {
+    return ImmutableMap.of("snapshots", mode.name().toLowerCase(Locale.US));
   }
 
   private LoadTableResponse loadInternal(
       SessionContext context, TableIdentifier identifier, SnapshotMode mode) {
     Endpoint.check(endpoints, Endpoint.V1_LOAD_TABLE);
-    return client.get(
-        paths.table(identifier),
-        mode.params(),
-        LoadTableResponse.class,
-        headers(context),
-        ErrorHandlers.tableErrorHandler());
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+    return client
+        .withAuthSession(contextualSession)
+        .get(
+            paths.table(identifier),
+            snapshotModeToParam(mode),
+            LoadTableResponse.class,
+            Map.of(),
+            ErrorHandlers.tableErrorHandler());
   }
 
   @Override
@@ -482,7 +426,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     }
 
     TableIdentifier finalIdentifier = loadedIdent;
-    AuthSession session = tableSession(response.config(), session(context));
+    Map<String, String> tableConf = response.config();
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+    AuthSession tableSession =
+        authManager.tableSession(finalIdentifier, tableConf, contextualSession);
     TableMetadata tableMetadata;
 
     if (snapshotMode == SnapshotMode.REFS) {
@@ -501,12 +448,13 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       tableMetadata = response.tableMetadata();
     }
 
+    RESTClient tableClient = client.withAuthSession(tableSession);
     RESTTableOperations ops =
         new RESTTableOperations(
-            client,
+            tableClient,
             paths.table(finalIdentifier),
-            session::headers,
-            tableFileIO(context, response.config()),
+            Map::of,
+            tableFileIO(context, tableConf, response.credentials()),
             tableMetadata,
             endpoints);
 
@@ -516,7 +464,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         new BaseTable(
             ops,
             fullTableName(finalIdentifier),
-            metricsReporter(paths.metrics(finalIdentifier), session::headers));
+            metricsReporter(paths.metrics(finalIdentifier), tableClient));
     if (metadataType != null) {
       return MetadataTableUtils.createMetadataTableInstance(table, metadataType);
     }
@@ -530,11 +478,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     }
   }
 
-  private MetricsReporter metricsReporter(
-      String metricsEndpoint, Supplier<Map<String, String>> headers) {
+  private MetricsReporter metricsReporter(String metricsEndpoint, RESTClient restClient) {
     if (reportingViaRestEnabled && endpoints.contains(Endpoint.V1_REPORT_METRICS)) {
       RESTMetricsReporter restMetricsReporter =
-          new RESTMetricsReporter(client, metricsEndpoint, headers);
+          new RESTMetricsReporter(restClient, metricsEndpoint, Map::of);
       return MetricsReporters.combine(reporter, restMetricsReporter);
     } else {
       return this.reporter;
@@ -567,28 +514,33 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
             .metadataLocation(metadataFileLocation)
             .build();
 
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
     LoadTableResponse response =
-        client.post(
-            paths.register(ident.namespace()),
-            request,
-            LoadTableResponse.class,
-            headers(context),
-            ErrorHandlers.tableErrorHandler());
+        client
+            .withAuthSession(contextualSession)
+            .post(
+                paths.register(ident.namespace()),
+                request,
+                LoadTableResponse.class,
+                Map.of(),
+                ErrorHandlers.tableErrorHandler());
 
-    AuthSession session = tableSession(response.config(), session(context));
+    Map<String, String> tableConf = response.config();
+    AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
+    RESTClient tableClient = client.withAuthSession(tableSession);
     RESTTableOperations ops =
         new RESTTableOperations(
-            client,
+            tableClient,
             paths.table(ident),
-            session::headers,
-            tableFileIO(context, response.config()),
+            Map::of,
+            tableFileIO(context, tableConf, response.credentials()),
             response.tableMetadata(),
             endpoints);
 
     trackFileIO(ops);
 
     return new BaseTable(
-        ops, fullTableName(ident), metricsReporter(paths.metrics(ident), session::headers));
+        ops, fullTableName(ident), metricsReporter(paths.metrics(ident), tableClient));
   }
 
   @Override
@@ -599,12 +551,15 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         CreateNamespaceRequest.builder().withNamespace(namespace).setProperties(metadata).build();
 
     // for now, ignore the response because there is no way to return it
-    client.post(
-        paths.namespaces(),
-        request,
-        CreateNamespaceResponse.class,
-        headers(context),
-        ErrorHandlers.namespaceErrorHandler());
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+    client
+        .withAuthSession(contextualSession)
+        .post(
+            paths.namespaces(),
+            request,
+            CreateNamespaceResponse.class,
+            Map.of(),
+            ErrorHandlers.namespaceErrorHandler());
   }
 
   @Override
@@ -615,7 +570,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     Map<String, String> queryParams = Maps.newHashMap();
     if (!namespace.isEmpty()) {
-      queryParams.put("parent", RESTUtil.encodeNamespace(namespace));
+      queryParams.put("parent", RESTUtil.NAMESPACE_JOINER.join(namespace.levels()));
     }
 
     ImmutableList.Builder<Namespace> namespaces = ImmutableList.builder();
@@ -626,13 +581,16 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     do {
       queryParams.put("pageToken", pageToken);
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
       ListNamespacesResponse response =
-          client.get(
-              paths.namespaces(),
-              queryParams,
-              ListNamespacesResponse.class,
-              headers(context),
-              ErrorHandlers.namespaceErrorHandler());
+          client
+              .withAuthSession(contextualSession)
+              .get(
+                  paths.namespaces(),
+                  queryParams,
+                  ListNamespacesResponse.class,
+                  Map.of(),
+                  ErrorHandlers.namespaceErrorHandler());
       pageToken = response.nextPageToken();
       namespaces.addAll(response.namespaces());
     } while (pageToken != null);
@@ -641,17 +599,39 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
   }
 
   @Override
+  public boolean namespaceExists(SessionContext context, Namespace namespace) {
+    try {
+      checkNamespaceIsValid(namespace);
+      if (endpoints.contains(Endpoint.V1_NAMESPACE_EXISTS)) {
+        AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+        client
+            .withAuthSession(contextualSession)
+            .head(paths.namespace(namespace), Map.of(), ErrorHandlers.namespaceErrorHandler());
+        return true;
+      } else {
+        // fallback in order to work with 1.7.x and older servers
+        return super.namespaceExists(context, namespace);
+      }
+    } catch (NoSuchNamespaceException e) {
+      return false;
+    }
+  }
+
+  @Override
   public Map<String, String> loadNamespaceMetadata(SessionContext context, Namespace ns) {
     Endpoint.check(endpoints, Endpoint.V1_LOAD_NAMESPACE);
     checkNamespaceIsValid(ns);
 
     // TODO: rename to LoadNamespaceResponse?
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
     GetNamespaceResponse response =
-        client.get(
-            paths.namespace(ns),
-            GetNamespaceResponse.class,
-            headers(context),
-            ErrorHandlers.namespaceErrorHandler());
+        client
+            .withAuthSession(contextualSession)
+            .get(
+                paths.namespace(ns),
+                GetNamespaceResponse.class,
+                Map.of(),
+                ErrorHandlers.namespaceErrorHandler());
     return response.properties();
   }
 
@@ -661,8 +641,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkNamespaceIsValid(ns);
 
     try {
-      client.delete(
-          paths.namespace(ns), null, headers(context), ErrorHandlers.namespaceErrorHandler());
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+      client
+          .withAuthSession(contextualSession)
+          .delete(paths.namespace(ns), null, Map.of(), ErrorHandlers.dropNamespaceErrorHandler());
       return true;
     } catch (NoSuchNamespaceException e) {
       return false;
@@ -678,63 +660,24 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     UpdateNamespacePropertiesRequest request =
         UpdateNamespacePropertiesRequest.builder().updateAll(updates).removeAll(removals).build();
 
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
     UpdateNamespacePropertiesResponse response =
-        client.post(
-            paths.namespaceProperties(ns),
-            request,
-            UpdateNamespacePropertiesResponse.class,
-            headers(context),
-            ErrorHandlers.namespaceErrorHandler());
+        client
+            .withAuthSession(contextualSession)
+            .post(
+                paths.namespaceProperties(ns),
+                request,
+                UpdateNamespacePropertiesResponse.class,
+                Map.of(),
+                ErrorHandlers.namespaceErrorHandler());
 
     return !response.updated().isEmpty();
   }
 
-  private ScheduledExecutorService tokenRefreshExecutor(String catalogName) {
-    if (!keepTokenRefreshed) {
-      return null;
-    }
-
-    if (refreshExecutor == null) {
-      synchronized (this) {
-        if (refreshExecutor == null) {
-          this.refreshExecutor = ThreadPools.newScheduledPool(catalogName + "-token-refresh", 1);
-        }
-      }
-    }
-
-    return refreshExecutor;
-  }
-
   @Override
   public void close() throws IOException {
-    shutdownRefreshExecutor();
-
     if (closeables != null) {
       closeables.close();
-    }
-  }
-
-  private void shutdownRefreshExecutor() {
-    if (refreshExecutor != null) {
-      ScheduledExecutorService service = refreshExecutor;
-      this.refreshExecutor = null;
-
-      List<Runnable> tasks = service.shutdownNow();
-      tasks.forEach(
-          task -> {
-            if (task instanceof Future) {
-              ((Future<?>) task).cancel(true);
-            }
-          });
-
-      try {
-        if (!service.awaitTermination(1, TimeUnit.MINUTES)) {
-          LOG.warn("Timed out waiting for refresh executor to terminate");
-        }
-      } catch (InterruptedException e) {
-        LOG.warn("Interrupted while waiting for refresh executor to terminate", e);
-        Thread.currentThread().interrupt();
-      }
     }
   }
 
@@ -753,6 +696,35 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       this.ident = ident;
       this.schema = schema;
       this.context = context;
+      propertiesBuilder.putAll(tableDefaultProperties());
+    }
+
+    /**
+     * Get default table properties set at Catalog level through catalog properties.
+     *
+     * @return default table properties specified in catalog properties
+     */
+    private Map<String, String> tableDefaultProperties() {
+      Map<String, String> tableDefaultProperties =
+          PropertyUtil.propertiesWithPrefix(properties(), CatalogProperties.TABLE_DEFAULT_PREFIX);
+      LOG.info(
+          "Table properties set at catalog level through catalog properties: {}",
+          tableDefaultProperties);
+      return tableDefaultProperties;
+    }
+
+    /**
+     * Get table properties that are enforced at Catalog level through catalog properties.
+     *
+     * @return overriding table properties enforced through catalog properties
+     */
+    private Map<String, String> tableOverrideProperties() {
+      Map<String, String> tableOverrideProperties =
+          PropertyUtil.propertiesWithPrefix(properties(), CatalogProperties.TABLE_OVERRIDE_PREFIX);
+      LOG.info(
+          "Table properties enforced at catalog level through catalog properties: {}",
+          tableOverrideProperties);
+      return tableOverrideProperties;
     }
 
     @Override
@@ -790,6 +762,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     @Override
     public Table create() {
       Endpoint.check(endpoints, Endpoint.V1_CREATE_TABLE);
+      propertiesBuilder.putAll(tableOverrideProperties());
       CreateTableRequest request =
           CreateTableRequest.builder()
               .withName(ident.name())
@@ -797,31 +770,36 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .withPartitionSpec(spec)
               .withWriteOrder(writeOrder)
               .withLocation(location)
-              .setProperties(propertiesBuilder.build())
+              .setProperties(propertiesBuilder.buildKeepingLast())
               .build();
 
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
       LoadTableResponse response =
-          client.post(
-              paths.tables(ident.namespace()),
-              request,
-              LoadTableResponse.class,
-              headers(context),
-              ErrorHandlers.tableErrorHandler());
+          client
+              .withAuthSession(contextualSession)
+              .post(
+                  paths.tables(ident.namespace()),
+                  request,
+                  LoadTableResponse.class,
+                  Map.of(),
+                  ErrorHandlers.tableErrorHandler());
 
-      AuthSession session = tableSession(response.config(), session(context));
+      Map<String, String> tableConf = response.config();
+      AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
+      RESTClient tableClient = client.withAuthSession(tableSession);
       RESTTableOperations ops =
           new RESTTableOperations(
-              client,
+              tableClient,
               paths.table(ident),
-              session::headers,
-              tableFileIO(context, response.config()),
+              Map::of,
+              tableFileIO(context, tableConf, response.credentials()),
               response.tableMetadata(),
               endpoints);
 
       trackFileIO(ops);
 
       return new BaseTable(
-          ops, fullTableName(ident), metricsReporter(paths.metrics(ident), session::headers));
+          ops, fullTableName(ident), metricsReporter(paths.metrics(ident), tableClient));
     }
 
     @Override
@@ -830,15 +808,18 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       LoadTableResponse response = stageCreate();
       String fullName = fullTableName(ident);
 
-      AuthSession session = tableSession(response.config(), session(context));
+      Map<String, String> tableConf = response.config();
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+      AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
       TableMetadata meta = response.tableMetadata();
 
+      RESTClient tableClient = client.withAuthSession(tableSession);
       RESTTableOperations ops =
           new RESTTableOperations(
-              client,
+              tableClient,
               paths.table(ident),
-              session::headers,
-              tableFileIO(context, response.config()),
+              Map::of,
+              tableFileIO(context, tableConf, response.credentials()),
               RESTTableOperations.UpdateType.CREATE,
               createChanges(meta),
               meta,
@@ -847,7 +828,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       trackFileIO(ops);
 
       return Transactions.createTableTransaction(
-          fullName, ops, meta, metricsReporter(paths.metrics(ident), session::headers));
+          fullName, ops, meta, metricsReporter(paths.metrics(ident), tableClient));
     }
 
     @Override
@@ -860,10 +841,13 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       LoadTableResponse response = loadInternal(context, ident, snapshotMode);
       String fullName = fullTableName(ident);
 
-      AuthSession session = tableSession(response.config(), session(context));
+      Map<String, String> tableConf = response.config();
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+      AuthSession tableSession = authManager.tableSession(ident, tableConf, contextualSession);
       TableMetadata base = response.tableMetadata();
 
-      Map<String, String> tableProperties = propertiesBuilder.build();
+      propertiesBuilder.putAll(tableOverrideProperties());
+      Map<String, String> tableProperties = propertiesBuilder.buildKeepingLast();
       TableMetadata replacement =
           base.buildReplacement(
               schema,
@@ -892,12 +876,13 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
         changes.add(new MetadataUpdate.SetDefaultSortOrder(replacement.defaultSortOrderId()));
       }
 
+      RESTClient tableClient = client.withAuthSession(tableSession);
       RESTTableOperations ops =
           new RESTTableOperations(
-              client,
+              tableClient,
               paths.table(ident),
-              session::headers,
-              tableFileIO(context, response.config()),
+              Map::of,
+              tableFileIO(context, tableConf, response.credentials()),
               RESTTableOperations.UpdateType.REPLACE,
               changes.build(),
               base,
@@ -906,7 +891,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       trackFileIO(ops);
 
       return Transactions.replaceTableTransaction(
-          fullName, ops, replacement, metricsReporter(paths.metrics(ident), session::headers));
+          fullName, ops, replacement, metricsReporter(paths.metrics(ident), tableClient));
     }
 
     @Override
@@ -925,7 +910,8 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     }
 
     private LoadTableResponse stageCreate() {
-      Map<String, String> tableProperties = propertiesBuilder.build();
+      propertiesBuilder.putAll(tableOverrideProperties());
+      Map<String, String> tableProperties = propertiesBuilder.buildKeepingLast();
 
       CreateTableRequest request =
           CreateTableRequest.builder()
@@ -938,12 +924,15 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .setProperties(tableProperties)
               .build();
 
-      return client.post(
-          paths.tables(ident.namespace()),
-          request,
-          LoadTableResponse.class,
-          headers(context),
-          ErrorHandlers.tableErrorHandler());
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+      return client
+          .withAuthSession(contextualSession)
+          .post(
+              paths.tables(ident.namespace()),
+              request,
+              LoadTableResponse.class,
+              Map.of(),
+              ErrorHandlers.tableErrorHandler());
     }
   }
 
@@ -954,7 +943,7 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     changes.add(new MetadataUpdate.UpgradeFormatVersion(meta.formatVersion()));
 
     Schema schema = meta.schema();
-    changes.add(new MetadataUpdate.AddSchema(schema, schema.highestFieldId()));
+    changes.add(new MetadataUpdate.AddSchema(schema));
     changes.add(new MetadataUpdate.SetCurrentSchema(-1));
 
     PartitionSpec spec = meta.spec();
@@ -991,44 +980,38 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
   }
 
   private FileIO newFileIO(SessionContext context, Map<String, String> properties) {
+    return newFileIO(context, properties, ImmutableList.of());
+  }
+
+  private FileIO newFileIO(
+      SessionContext context, Map<String, String> properties, List<Credential> storageCredentials) {
     if (null != ioBuilder) {
       return ioBuilder.apply(context, properties);
     } else {
       String ioImpl = properties.getOrDefault(CatalogProperties.FILE_IO_IMPL, DEFAULT_FILE_IO_IMPL);
-      return CatalogUtil.loadFileIO(ioImpl, properties, conf);
+      return CatalogUtil.loadFileIO(
+          ioImpl,
+          properties,
+          conf,
+          storageCredentials.stream()
+              .map(c -> StorageCredential.create(c.prefix(), c.config()))
+              .collect(Collectors.toList()));
     }
   }
 
-  private FileIO tableFileIO(SessionContext context, Map<String, String> config) {
-    if (config.isEmpty() && ioBuilder == null) {
-      return io; // reuse client and io since config is the same
+  private FileIO tableFileIO(
+      SessionContext context, Map<String, String> config, List<Credential> storageCredentials) {
+    if (config.isEmpty() && ioBuilder == null && storageCredentials.isEmpty()) {
+      return io; // reuse client and io since config/credentials are the same
     }
 
     Map<String, String> fullConf = RESTUtil.merge(properties(), config);
 
-    return newFileIO(context, fullConf);
-  }
-
-  private AuthSession tableSession(Map<String, String> tableConf, AuthSession parent) {
-    Map<String, String> credentials = Maps.newHashMapWithExpectedSize(tableConf.size());
-    for (String prop : tableConf.keySet()) {
-      if (TABLE_SESSION_ALLOW_LIST.contains(prop)) {
-        credentials.put(prop, tableConf.get(prop));
-      }
-    }
-
-    Pair<String, Supplier<AuthSession>> newSession = newSession(credentials, tableConf, parent);
-    if (null == newSession) {
-      return parent;
-    }
-
-    AuthSession session = tableSessions.get(newSession.first(), id -> newSession.second().get());
-
-    return session != null ? session : parent;
+    return newFileIO(context, fullConf, storageCredentials);
   }
 
   private static ConfigResponse fetchConfig(
-      RESTClient client, Map<String, String> headers, Map<String, String> properties) {
+      RESTClient client, AuthSession initialAuth, Map<String, String> properties) {
     // send the client's warehouse location to the service to keep in sync
     // this is needed for cases where the warehouse is configured client side, but may be used on
     // the server side,
@@ -1042,74 +1025,16 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     }
 
     ConfigResponse configResponse =
-        client.get(
-            ResourcePaths.config(),
-            queryParams.build(),
-            ConfigResponse.class,
-            headers,
-            ErrorHandlers.defaultErrorHandler());
+        client
+            .withAuthSession(initialAuth)
+            .get(
+                ResourcePaths.config(),
+                queryParams.build(),
+                ConfigResponse.class,
+                RESTUtil.configHeaders(properties),
+                ErrorHandlers.defaultErrorHandler());
     configResponse.validate();
     return configResponse;
-  }
-
-  private Pair<String, Supplier<AuthSession>> newSession(
-      Map<String, String> credentials, Map<String, String> properties, AuthSession parent) {
-    if (credentials != null) {
-      // use the bearer token without exchanging
-      if (credentials.containsKey(OAuth2Properties.TOKEN)) {
-        return Pair.of(
-            credentials.get(OAuth2Properties.TOKEN),
-            () ->
-                AuthSession.fromAccessToken(
-                    client,
-                    tokenRefreshExecutor(name()),
-                    credentials.get(OAuth2Properties.TOKEN),
-                    expiresAtMillis(properties),
-                    parent));
-      }
-
-      if (credentials.containsKey(OAuth2Properties.CREDENTIAL)) {
-        // fetch a token using the client credentials flow
-        return Pair.of(
-            credentials.get(OAuth2Properties.CREDENTIAL),
-            () ->
-                AuthSession.fromCredential(
-                    client,
-                    tokenRefreshExecutor(name()),
-                    credentials.get(OAuth2Properties.CREDENTIAL),
-                    parent));
-      }
-
-      for (String tokenType : TOKEN_PREFERENCE_ORDER) {
-        if (credentials.containsKey(tokenType)) {
-          // exchange the token for an access token using the token exchange flow
-          return Pair.of(
-              credentials.get(tokenType),
-              () ->
-                  AuthSession.fromTokenExchange(
-                      client,
-                      tokenRefreshExecutor(name()),
-                      credentials.get(tokenType),
-                      tokenType,
-                      parent));
-        }
-      }
-    }
-
-    return null;
-  }
-
-  private Long expiresAtMillis(Map<String, String> properties) {
-    if (properties.containsKey(OAuth2Properties.TOKEN_EXPIRES_IN_MS)) {
-      long expiresInMillis =
-          PropertyUtil.propertyAsLong(
-              properties,
-              OAuth2Properties.TOKEN_EXPIRES_IN_MS,
-              OAuth2Properties.TOKEN_EXPIRES_IN_MS_DEFAULT);
-      return System.currentTimeMillis() + expiresInMillis;
-    } else {
-      return null;
-    }
   }
 
   private void checkIdentifierIsValid(TableIdentifier tableIdentifier) {
@@ -1130,29 +1055,6 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     }
   }
 
-  private static Map<String, String> configHeaders(Map<String, String> properties) {
-    return RESTUtil.extractPrefixMap(properties, "header.");
-  }
-
-  private static Cache<String, AuthSession> newSessionCache(Map<String, String> properties) {
-    long expirationIntervalMs =
-        PropertyUtil.propertyAsLong(
-            properties,
-            CatalogProperties.AUTH_SESSION_TIMEOUT_MS,
-            CatalogProperties.AUTH_SESSION_TIMEOUT_MS_DEFAULT);
-
-    return Caffeine.newBuilder()
-        .expireAfterAccess(Duration.ofMillis(expirationIntervalMs))
-        .removalListener(
-            (RemovalListener<String, AuthSession>)
-                (id, auth, cause) -> {
-                  if (auth != null) {
-                    auth.stopRefreshing();
-                  }
-                })
-        .build();
-  }
-
   public void commitTransaction(SessionContext context, List<TableCommit> commits) {
     Endpoint.check(endpoints, Endpoint.V1_COMMIT_TRANSACTION);
     List<UpdateTableRequest> tableChanges = Lists.newArrayListWithCapacity(commits.size());
@@ -1162,12 +1064,15 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
           UpdateTableRequest.create(commit.identifier(), commit.requirements(), commit.updates()));
     }
 
-    client.post(
-        paths.commitTransaction(),
-        new CommitTransactionRequest(tableChanges),
-        null,
-        headers(context),
-        ErrorHandlers.tableCommitHandler());
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+    client
+        .withAuthSession(contextualSession)
+        .post(
+            paths.commitTransaction(),
+            new CommitTransactionRequest(tableChanges),
+            null,
+            Map.of(),
+            ErrorHandlers.tableCommitHandler());
   }
 
   @Override
@@ -1186,18 +1091,40 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     do {
       queryParams.put("pageToken", pageToken);
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
       ListTablesResponse response =
-          client.get(
-              paths.views(namespace),
-              queryParams,
-              ListTablesResponse.class,
-              headers(context),
-              ErrorHandlers.namespaceErrorHandler());
+          client
+              .withAuthSession(contextualSession)
+              .get(
+                  paths.views(namespace),
+                  queryParams,
+                  ListTablesResponse.class,
+                  Map.of(),
+                  ErrorHandlers.namespaceErrorHandler());
       pageToken = response.nextPageToken();
       views.addAll(response.identifiers());
     } while (pageToken != null);
 
     return views.build();
+  }
+
+  @Override
+  public boolean viewExists(SessionContext context, TableIdentifier identifier) {
+    try {
+      checkViewIdentifierIsValid(identifier);
+      if (endpoints.contains(Endpoint.V1_VIEW_EXISTS)) {
+        AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+        client
+            .withAuthSession(contextualSession)
+            .head(paths.view(identifier), Map.of(), ErrorHandlers.viewErrorHandler());
+        return true;
+      } else {
+        // fallback in order to work with 1.7.x and older servers
+        return super.viewExists(context, identifier);
+      }
+    } catch (NoSuchViewException e) {
+      return false;
+    }
   }
 
   @Override
@@ -1212,25 +1139,33 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
     checkViewIdentifierIsValid(identifier);
 
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
     LoadViewResponse response =
-        client.get(
-            paths.view(identifier),
-            LoadViewResponse.class,
-            headers(context),
-            ErrorHandlers.viewErrorHandler());
+        client
+            .withAuthSession(contextualSession)
+            .get(
+                paths.view(identifier),
+                LoadViewResponse.class,
+                Map.of(),
+                ErrorHandlers.viewErrorHandler());
 
-    AuthSession session = tableSession(response.config(), session(context));
+    Map<String, String> tableConf = response.config();
+    AuthSession tableSession = authManager.tableSession(identifier, tableConf, contextualSession);
     ViewMetadata metadata = response.metadata();
 
     RESTViewOperations ops =
         new RESTViewOperations(
-            client, paths.view(identifier), session::headers, metadata, endpoints);
+            client.withAuthSession(tableSession),
+            paths.view(identifier),
+            Map::of,
+            metadata,
+            endpoints);
 
     return new BaseView(ops, ViewUtil.fullViewName(name(), identifier));
   }
 
   @Override
-  public RESTViewBuilder buildView(SessionContext context, TableIdentifier identifier) {
+  public ViewBuilder buildView(SessionContext context, TableIdentifier identifier) {
     return new RESTViewBuilder(context, identifier);
   }
 
@@ -1240,8 +1175,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     checkViewIdentifierIsValid(identifier);
 
     try {
-      client.delete(
-          paths.view(identifier), null, headers(context), ErrorHandlers.viewErrorHandler());
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+      client
+          .withAuthSession(contextualSession)
+          .delete(paths.view(identifier), null, Map.of(), ErrorHandlers.viewErrorHandler());
       return true;
     } catch (NoSuchViewException e) {
       return false;
@@ -1257,8 +1194,10 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
     RenameTableRequest request =
         RenameTableRequest.builder().withSource(from).withDestination(to).build();
 
-    client.post(
-        paths.renameView(), request, null, headers(context), ErrorHandlers.viewErrorHandler());
+    AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+    client
+        .withAuthSession(contextualSession)
+        .post(paths.renameView(), request, null, Map.of(), ErrorHandlers.viewErrorHandler());
   }
 
   private class RESTViewBuilder implements ViewBuilder {
@@ -1275,6 +1214,35 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
       checkViewIdentifierIsValid(identifier);
       this.identifier = identifier;
       this.context = context;
+      this.properties.putAll(viewDefaultProperties());
+    }
+
+    /**
+     * Get default view properties set at Catalog level through catalog properties.
+     *
+     * @return default view properties specified in catalog properties
+     */
+    private Map<String, String> viewDefaultProperties() {
+      Map<String, String> viewDefaultProperties =
+          PropertyUtil.propertiesWithPrefix(properties(), CatalogProperties.VIEW_DEFAULT_PREFIX);
+      LOG.info(
+          "View properties set at catalog level through catalog properties: {}",
+          viewDefaultProperties);
+      return viewDefaultProperties;
+    }
+
+    /**
+     * Get view properties that are enforced at Catalog level through catalog properties.
+     *
+     * @return overriding view properties enforced through catalog properties
+     */
+    private Map<String, String> viewOverrideProperties() {
+      Map<String, String> viewOverrideProperties =
+          PropertyUtil.propertiesWithPrefix(properties(), CatalogProperties.VIEW_OVERRIDE_PREFIX);
+      LOG.info(
+          "View properties enforced at catalog level through catalog properties: {}",
+          viewOverrideProperties);
+      return viewOverrideProperties;
     }
 
     @Override
@@ -1340,6 +1308,8 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .putAllSummary(EnvironmentContext.get())
               .build();
 
+      properties.putAll(viewOverrideProperties());
+
       CreateViewRequest request =
           ImmutableCreateViewRequest.builder()
               .name(identifier.name())
@@ -1349,18 +1319,26 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .properties(properties)
               .build();
 
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
       LoadViewResponse response =
-          client.post(
-              paths.views(identifier.namespace()),
-              request,
-              LoadViewResponse.class,
-              headers(context),
-              ErrorHandlers.viewErrorHandler());
+          client
+              .withAuthSession(contextualSession)
+              .post(
+                  paths.views(identifier.namespace()),
+                  request,
+                  LoadViewResponse.class,
+                  Map.of(),
+                  ErrorHandlers.viewErrorHandler());
 
-      AuthSession session = tableSession(response.config(), session(context));
+      Map<String, String> tableConf = response.config();
+      AuthSession tableSession = authManager.tableSession(identifier, tableConf, contextualSession);
       RESTViewOperations ops =
           new RESTViewOperations(
-              client, paths.view(identifier), session::headers, response.metadata(), endpoints);
+              client.withAuthSession(tableSession),
+              paths.view(identifier),
+              Map::of,
+              response.metadata(),
+              endpoints);
 
       return new BaseView(ops, ViewUtil.fullViewName(name(), identifier));
     }
@@ -1392,11 +1370,14 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
                   "Unable to load view %s.%s: Server does not support endpoint %s",
                   name(), identifier, Endpoint.V1_LOAD_VIEW));
 
-      return client.get(
-          paths.view(identifier),
-          LoadViewResponse.class,
-          headers(context),
-          ErrorHandlers.viewErrorHandler());
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+      return client
+          .withAuthSession(contextualSession)
+          .get(
+              paths.view(identifier),
+              LoadViewResponse.class,
+              Map.of(),
+              ErrorHandlers.viewErrorHandler());
     }
 
     private View replace(LoadViewResponse response) {
@@ -1426,6 +1407,8 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
               .putAllSummary(EnvironmentContext.get())
               .build();
 
+      properties.putAll(viewOverrideProperties());
+
       ViewMetadata.Builder builder =
           ViewMetadata.buildFrom(metadata)
               .setProperties(properties)
@@ -1437,10 +1420,16 @@ public class RESTSessionCatalog extends BaseViewSessionCatalog
 
       ViewMetadata replacement = builder.build();
 
-      AuthSession session = tableSession(response.config(), session(context));
+      Map<String, String> tableConf = response.config();
+      AuthSession contextualSession = authManager.contextualSession(context, catalogAuth);
+      AuthSession tableSession = authManager.tableSession(identifier, tableConf, contextualSession);
       RESTViewOperations ops =
           new RESTViewOperations(
-              client, paths.view(identifier), session::headers, metadata, endpoints);
+              client.withAuthSession(tableSession),
+              paths.view(identifier),
+              Map::of,
+              metadata,
+              endpoints);
 
       ops.commit(metadata, replacement);
 
